force-app/main/default/objects/Meeting_WF_Skip_Rule__c/Meeting_WF_Skip_Rule__c.object-meta.xml
<CustomObject>
    <label>Meeting WF Skip Rule</label>
    <nameField>
        <displayFormat>WFSR-{00000}</displayFormat>
        <label>Meeting WF Skip Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting WF Skip Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>