force-app/main/default/objects/Meeting_WF_Skip_Rule__c/fields/Condition_Type__c.field-meta.xml
<CustomField>
    <fullName>Condition_Type__c</fullName>
    <description>Meeting WF config</description>
    <label>Condition Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OwnerTitleIn</fullName>
                <default>true</default>
                <label>OwnerTitleIn</label>
            </value>
            <value>
                <fullName>OwnerTitleContains</fullName>
            </value>
            <value>
                <fullName>OwnerProfileNotIn</fullName>
            </value>
            <value>
                <fullName>Always</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>