force-app/main/default/objects/Meeting_WF_Skip_Rule__c/fields/Condition_Values__c.field-meta.xml
<CustomField>
    <fullName>Condition_Values__c</fullName>
    <description>Meeting WF config</description>
    <label>Condition Values</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>