force-app/main/default/objects/Meeting_WF_Skip_Rule__c/fields/Record_Types__c.field-meta.xml
<CustomField>
    <fullName>Record_Types__c</fullName>
    <description>Meeting WF config</description>
    <label>Record Types</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>