force-app/main/default/objects/Meeting_WF_Skip_Rule__c/fields/To_Status__c.field-meta.xml
<CustomField>
    <fullName>To_Status__c</fullName>
    <description>Meeting WF config</description>
    <label>To Status</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>