force-app/main/default/objects/Meeting_WF_Skip_Rule__c/fields/Workflow__c.field-meta.xml
<CustomField>
    <fullName>Workflow__c</fullName>
    <description>Meeting WF config</description>
    <label>Workflow</label>
    <referenceTo>Meeting_Workflow__c</referenceTo>
    <relationshipLabel>Skip Rules</relationshipLabel>
    <relationshipName>WF_Skip_Rules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>